Added TexMex Project and linked the Portfolio website in its project section

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/rahul-challa/Portfolio" class="project-link" target="_blank" aria-label="GitHub Code"><i data-feather="github"></i></a>
-                            <a href="#" class="project-link" target="_blank" aria-label="Live Site"><i data-feather="external-link"></i></a>
+                            <a href="https://rahul-challa.github.io/Portfolio/" class="project-link" target="_blank" aria-label="Live Site"><i data-feather="external-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -275,6 +275,25 @@
                         <div class="project-links">
                             <a href="https://github.com/rahul-challa/Stock-Dashboard" class="project-link" target="_blank" aria-label="GitHub Code"><i data-feather="github"></i></a>
                             <a href="https://rahul-challa.github.io/Stock-Dashboard/" class="project-link" target="_blank" aria-label="Live Site"><i data-feather="external-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- TexMex: LaTeX Live Preview for VS Code -->
+                <div class="project-card dashboard-card">
+                    <div class="project-info">
+                        <h3 class="project-title" style="color: #FFB81C; font-weight: 700;">TexMex</h3>
+                        <p class="project-description">A powerful VS Code extension that brings Overleaf-style LaTeX editing directly to your local editor. TexMex enables real-time PDF preview, automatic recompilation on save, and inline error reporting without needing to leave VS Code. Designed for smooth academic writing and technical documentation, the extension offers a configurable setup for compiler paths and preview delays.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">VS Code Extension API</span>
+                            <span class="tech-tag">TypeScript</span>
+                            <span class="tech-tag">Node.js</span>
+                            <span class="tech-tag">LaTeX (TeX Live/MiKTeX)</span>
+                            <span class="tech-tag">PDF.js</span>
+                            <span class="tech-tag">npm</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/rahul-challa/TexMex" class="project-link" target="_blank" aria-label="GitHub Code"><i data-feather="github"></i></a>
+                            <a href="https://marketplace.visualstudio.com/items?itemName=RahulChalla.texmex" class="project-link" target="_blank" aria-label="Live Site"><i data-feather="external-link"></i></a>
                         </div>
                     </div>
                 </div>
