Added the project "Lettuce Cook"

--- a/index.html
+++ b/index.html
@@ -297,6 +297,25 @@
                         </div>
                     </div>
                 </div>
+                <!-- Lettuce Cook: A React Webapp to share Recipes -->
+                <div class="project-card dashboard-card">
+                    <div class="project-info">
+                        <h3 class="project-title" style="color: #FFB81C; font-weight: 700;">Lettuce Cook</h3>
+                        <p class="project-description">A modern, cookbook and recipe website that enables users to browse, search, and filter a curated collection of recipes with ease. Built with React and TypeScript, LettuceCook features a bold, dramatic UI, responsive recipe grid, tag-based filtering, and a detailed recipe view with export-to-DOCX functionality. All assets are locally hosted for fast performance, and the app is fully static—perfect for deployment on GitHub Pages. Includes advanced search, beautiful hero section, and accessible design throughout.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">React</span>
+                            <span class="tech-tag">TypeScript</span>
+                            <span class="tech-tag">Styled Components</span>
+                            <span class="tech-tag">React Router</span>
+                            <span class="tech-tag">export-to-DOCX</span>
+                            <span class="tech-tag">Github Pages</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/rahul-challa/Lettuce-Cook" class="project-link" target="_blank" aria-label="GitHub Code"><i data-feather="github"></i></a>
+                            <a href="https://rahul-challa.github.io/Lettuce-Cook/" class="project-link" target="_blank" aria-label="Live Site"><i data-feather="external-link"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
