Updated links for lettucecook

--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
                             <span class="tech-tag">Github Pages</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/rahul-challa/Lettuce-Cook" class="project-link" target="_blank" aria-label="GitHub Code"><i data-feather="github"></i></a>
-                            <a href="https://rahul-challa.github.io/Lettuce-Cook/" class="project-link" target="_blank" aria-label="Live Site"><i data-feather="external-link"></i></a>
+                            <a href="https://github.com/rahul-challa/lettucecook" class="project-link" target="_blank" aria-label="GitHub Code"><i data-feather="github"></i></a>
+                            <a href="https://rahul-challa.github.io/lettucecook/" class="project-link" target="_blank" aria-label="Live Site"><i data-feather="external-link"></i></a>
                         </div>
                     </div>
                 </div>
