Updated Leetcode section

--- a/index.html
+++ b/index.html
@@ -368,7 +368,8 @@
     </a>
     
     <!-- Scripts -->
-    <script src="js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+    <script src="js/main.js" defer></script>
     <script src="js/animations.js"></script>
     
     <!-- Initialize Feather Icons -->
