--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio showcasing my projects, skills, and experience">
+    <meta name="description" content="Rahul Challa - Software Developer Portfolio showcasing projects, skills, and experience. Specialized in full-stack development, AI/ML, and distributed systems.">
+    <meta name="keywords" content="Rahul Challa, Software Developer, Portfolio, Full Stack Developer, AI/ML, Distributed Systems">
+    <meta name="author" content="Rahul Challa">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Rahul Challa | Portfolio">
+    <meta property="og:description" content="Software Developer Portfolio showcasing projects, skills, and experience">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://rahul-challa.github.io/Portfolio/">
     <title>Rahul Challa | Portfolio</title>
     
     <!-- Favicon -->
